# clicknick

./: .copier-answers.yml  .gitignore  AGENTS.md  ARCHITECTURAL_PLAN.md  ARCHITECTURE_PLAN.md  CHANGELOG.md  HANDOFF.md  HANDOFF2.md  IMPLEMENTATION_PLAN.md  Makefile  RE-notes.md  README.md  TESTING.md  claude.md  development.md  extract-click-plc-core-plan.md  installation.md  next-steps.md  pyproject.toml  todo.md
.claude/: settings.local.json
devtools/: analyze_max1400_body_pages.py  analyze_max1400_page17.py  analyze_session_counter.py  capture.py  clipboard_load.py  control_byte_diff.py  grid_template_synth.py  ladder_capture_tui.py  lint.py  march8_comment_phase_a_synth.py  march8_comment_phase_b_analysis.py  march8_comment_stream_analysis.py  march8_comment_synthesis_readiness.py  march8_max1400_template_probe.py  march8_plain_comment_synth.py  march8_wireframe_band_audit.py  march8_wireframe_synth.py  noise_apply.py  noise_overlay.py  patch_capture_cells.py  prototype_max1400_body_synth.py  prototype_max1400_splice.py  two_series_patch_harness.py  update_ladder_capture_manifest.py  verify_mismatch_report.py
scratchpad/: analyze_colA_verifyback.py  analyze_cont_wire.py  analyze_cont_wire_v2.py  analyze_cont_wire_v3.py  capture-checklist.md  capture-diff-results.md  check_native_rtf.py  click_clipboard_map.html  dataview-live-plan.md  diff_1row_comment.py  diff_1row_exact.py  diff_all_1row_shapes.py  diff_codec_vs_direct.py  diff_comment_deep.py  diff_header_table.py  diff_preheader.py  enrich-ladder-manifest-update-schema-plan.md  generate_golden_fixtures.py  (+134 more)
(+219 files in other folders)
